# play_cmd

./: .gitignore  README.md  plan.md  pyproject.toml  tasklist.md
src/play_cmd/: __init__.py  __main__.py  app.py  cli.py  clipboard.py  config.py  cookies.py  history.py  models.py  mpv.py  paths.py  search.py
src/play_cmd/tui/: history_app.py  search_app.py  settings_app.py  theme.py
tests/: test_cli.py  test_clipboard.py  test_config.py  test_cookies.py  test_history.py  test_mpv_args.py  test_paths.py  test_search.py
